# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt  draw.c  draw.h  geometry.c  geometry.h  main.c  matrix.c  matrix.h  shader.c  shader.h  test.c  test.cpp
src/: camera.cpp  camera.hpp  light.cpp  light.hpp  main.cpp  object.cpp  object.hpp  shader.cpp  shader.hpp
